[package]
name = "echo"
version = "0.1.0"
authors = ["Tomas Basham <tomasbasham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# The latest version of the "futures" library, which has lots of utilities for
# writing async code. Enable the "compat" feature to include the functions for
# using futures 0.3 and async/await with the Hyper library, which use futures
# 0.1.
futures = { version = "0.3", features = ["compat"] }

# Hyper is an asynchronous HTTP library. We'll use it to power our HTTP
# server and to make HTTP requests.
hyper = "0.12.9"
